--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
-- distributed-process-simplelocalnet
+- distributed-process-simplelocalnet >= 0.2 && < 0.3
 - distributed-static
 - distributed-process
 - network
